<resources>
    <string name="app_name">SuperGenie</string>
    <string name="companyName">SuperGenie</string>
    <string name="version">0.0.0.0</string>
    <string name="projectId">1083662993807</string>
    <string name="copyrights">© 2015 Genie</string>
    <string name="welcomeMessage">Welcome to SuperGenie</string>
    <string name="title_activity_main" />
    <string name="splashScreenAlertBoxMessage">Attention! \nSuperGenie is not able to connect to internet.</string>
    <string name="openSettings">Open Settings</string>
    <string name="exitapp">Exit App</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="topText">Chat. Order. Done.</string>
    <string name="loading">Loading…</string>
    <string name="subText">Genie makes ordering as easy as chatting</string>
    <string name="getstarted">Get Started</string>
    <string name="name">Name</string>
    <string name="number">Phone Number</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="taptoresend">Tap to Resend</string>
    <string name="verifycodetext">Verification Code</string>
    <string name="getstartedcaps">GET STARTED</string>
    <string name="pleaseentername">Please Enter Name</string>
    <string name="pleaseentervalidnumber">Please Enter Valid Number</string>
    <string name="registeringuser">Setting you up</string>
    <string name="unexpectederror">Unexpected Error Try Again</string>
    <string name="title_activity_chat">Chat Activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="title_activity_user_profile">Profile</string>
    <string name="desc">Description</string>
    <string name="orderdetails">Order Details</string>
    <string name="update">Update</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="defaultnumber">9999999999</string>
    <string name="title_activity_order_details">Orders</string>
    <string name="title_activity_location">Share Location</string>
    <string name="repeatorder">REPEAT ORDER</string>
    <string name="loadearliermessages">Load Earlier Messages</string>
    <string name="buynow">Buy Now</string>
    <string name="typeamessage">Type a message or Tap on mic to speak</string>
    <string name="resendcoderequest">Requesting Server to resend code</string>
    <string name="code91">+91</string>
    <string name="errortryagain">Error. Try Again.</string>
    <string name="wrongverificationcode">Wrong Verification code.</string>
    <string name="servererrortryagain">Error. Try Again</string>
    <string name="error_toast">Oops! Something went wrong, our engineers are on it. Please ping SuperGenie after some time!</string>
    <string name="redoregistration">Redo Registration</string>
    <string name="gettinglocation">Getting Location</string>
    <string name="updatinguserinformation">Updating User information..</string>
    <string name="gettinglocationinfo">Getting Location..</string>
    <string name="entervalidinformation">Enter Name</string>
    <string name="errorwhileupdatinguserinformation">Error while updating user information.</string>
    <string name="entervalidemail">Enter valid Email</string>
    <string name="previousorders">Previous Orders</string>
    <string name="notabletoaccesslocation">Not able to access Location</string>
    <string name="foiledtogetthumbnails">Failed to get thumbnail for our image.</string>
    <string name="devicenotsupporttocroppicture">Whoops - your device doesn\'t support the crop action!</string>
    <string name="title_activity_user_profile_from_chat">UserProfileFromChatActivity</string>
    <string name="personalassistant">Your Personal Assistant</string>
    <string name="faq">FAQ</string>
    <string name="terms"><![CDATA[Terms & Services]]></string>
    <string name="smsrequestresend">Request Sent. Please check your SMS.</string>
    <string name="space10char">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="space12char">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="mapservicemissing">MAP SERVICE MISSING</string>
    <string name="mapupdate">MAP UPDATE REQUIRED</string>
    <string name="sendcurrentlocation">Send your location</string>
    <string name="favorites">My Favorites (Tap to send/ long press to delete)</string>
    <string name="mapapikey">AIzaSyAKq3vK3ugt7_Guk7a1uIdygRoHefAB_bM</string>
    <string name="errorinaccessinglocation">Error in accessing location</string>
    <string name="alerttopmessage">You can save this location as favorites. Helps you to use it in future.</string>
    <string name="gaveanametoplace">Give an unique name to your place</string>
    <string name="saveas">Save As</string>
    <string name="share">Share</string>
    <string name="trygenie">SuperGenie App</string>
    <string name="bodytext">Hey, I just used SuperGenie - Free Personal Assistant App for Ordering
        &amp; Buying Anything, and the experience was SuperAwesome :)
        \n\nJust Chat, Order, Done!  You can download the app here: \nhttps://play.google.com/store/apps/details?id=com.supergenieapp.android</string>
    <string name="shareus">Share Us</string>
    <string name="today">Today</string>
    <string name="paynow">Online</string>
    <string name="paycod">Cash on Delivery</string>
    <string name="price999">Rs. 999.00</string>
    <string name="paynowrandomtext">Your order from SuperGenie is Rs. 999.00. You will receive your order soon.</string>
    <string-array name="CountryCodes">
        <item>93,AF</item>
        <item>355,AL</item>
        <item>213,DZ</item>
        <item>376,AD</item>
        <item>244,AO</item>
        <item>672,AQ</item>
        <item>54,AR</item>
        <item>374,AM</item>
        <item>297,AW</item>
        <item>61,AU</item>
        <item>43,AT</item>
        <item>994,AZ</item>
        <item>973,BH</item>
        <item>880,BD</item>
        <item>375,BY</item>
        <item>32,BE</item>
        <item>501,BZ</item>
        <item>229,BJ</item>
        <item>975,BT</item>
        <item>591,BO</item>
        <item>387,BA</item>
        <item>267,BW</item>
        <item>55,BR</item>
        <item>673,BN</item>
        <item>359,BG</item>
        <item>226,BF</item>
        <item>95,MM</item>
        <item>257,BI</item>
        <item>855,KH</item>
        <item>237,CM</item>
        <item>1,CA</item>
        <item>238,CV</item>
        <item>236,CF</item>
        <item>235,TD</item>
        <item>56,CL</item>
        <item>86,CN</item>
        <item>61,CX</item>
        <item>61,CC</item>
        <item>57,CO</item>
        <item>269,KM</item>
        <item>242,CG</item>
        <item>243,CD</item>
        <item>682,CK</item>
        <item>506,CR</item>
        <item>385,HR</item>
        <item>53,CU</item>
        <item>357,CY</item>
        <item>420,CZ</item>
        <item>45,DK</item>
        <item>253,DJ</item>
        <item>670,TL</item>
        <item>593,EC</item>
        <item>20,EG</item>
        <item>503,SV</item>
        <item>240,GQ</item>
        <item>291,ER</item>
        <item>372,EE</item>
        <item>251,ET</item>
        <item>500,FK</item>
        <item>298,FO</item>
        <item>679,FJ</item>
        <item>358,FI</item>
        <item>33,FR</item>
        <item>689,PF</item>
        <item>241,GA</item>
        <item>220,GM</item>
        <item>995,GE</item>
        <item>49,DE</item>
        <item>233,GH</item>
        <item>350,GI</item>
        <item>30,GR</item>
        <item>299,GL</item>
        <item>502,GT</item>
        <item>224,GN</item>
        <item>245,GW</item>
        <item>592,GY</item>
        <item>509,HT</item>
        <item>504,HN</item>
        <item>852,HK</item>
        <item>36,HU</item>
        <item>91,IN</item>
        <item>62,ID</item>
        <item>98,IR</item>
        <item>964,IQ</item>
        <item>353,IE</item>
        <item>44,IM</item>
        <item>972,IL</item>
        <item>39,IT</item>
        <item>225,CI</item>
        <item>81,JP</item>
        <item>962,JO</item>
        <item>7,KZ</item>
        <item>254,KE</item>
        <item>686,KI</item>
        <item>965,KW</item>
        <item>996,KG</item>
        <item>856,LA</item>
        <item>371,LV</item>
        <item>961,LB</item>
        <item>266,LS</item>
        <item>231,LR</item>
        <item>218,LY</item>
        <item>423,LI</item>
        <item>370,LT</item>
        <item>352,LU</item>
        <item>853,MO</item>
        <item>389,MK</item>
        <item>261,MG</item>
        <item>265,MW</item>
        <item>60,MY</item>
        <item>960,MV</item>
        <item>223,ML</item>
        <item>356,MT</item>
        <item>692,MH</item>
        <item>222,MR</item>
        <item>230,MU</item>
        <item>262,YT</item>
        <item>52,MX</item>
        <item>691,FM</item>
        <item>373,MD</item>
        <item>377,MC</item>
        <item>976,MN</item>
        <item>382,ME</item>
        <item>212,MA</item>
        <item>258,MZ</item>
        <item>264,NA</item>
        <item>674,NR</item>
        <item>977,NP</item>
        <item>31,NL</item>
        <item>599,AN</item>
        <item>687,NC</item>
        <item>64,NZ</item>
        <item>505,NI</item>
        <item>227,NE</item>
        <item>234,NG</item>
        <item>683,NU</item>
        <item>850,KP</item>
        <item>47,NO</item>
        <item>968,OM</item>
        <item>92,PK</item>
        <item>680,PW</item>
        <item>507,PA</item>
        <item>675,PG</item>
        <item>595,PY</item>
        <item>51,PE</item>
        <item>63,PH</item>
        <item>870,PN</item>
        <item>48,PL</item>
        <item>351,PT</item>
        <item>1,PR</item>
        <item>974,QA</item>
        <item>40,RO</item>
        <item>7,RU</item>
        <item>250,RW</item>
        <item>590,BL</item>
        <item>685,WS</item>
        <item>378,SM</item>
        <item>239,ST</item>
        <item>966,SA</item>
        <item>221,SN</item>
        <item>381,RS</item>
        <item>248,SC</item>
        <item>232,SL</item>
        <item>65,SG</item>
        <item>421,SK</item>
        <item>386,SI</item>
        <item>677,SB</item>
        <item>252,SO</item>
        <item>27,ZA</item>
        <item>82,KR</item>
        <item>34,ES</item>
        <item>94,LK</item>
        <item>290,SH</item>
        <item>508,PM</item>
        <item>249,SD</item>
        <item>597,SR</item>
        <item>268,SZ</item>
        <item>46,SE</item>
        <item>41,CH</item>
        <item>963,SY</item>
        <item>886,TW</item>
        <item>992,TJ</item>
        <item>255,TZ</item>
        <item>66,TH</item>
        <item>228,TG</item>
        <item>690,TK</item>
        <item>676,TO</item>
        <item>216,TN</item>
        <item>90,TR</item>
        <item>993,TM</item>
        <item>688,TV</item>
        <item>971,AE</item>
        <item>256,UG</item>
        <item>44,GB</item>
        <item>380,UA</item>
        <item>598,UY</item>
        <item>1,US</item>
        <item>998,UZ</item>
        <item>678,VU</item>
        <item>39,VA</item>
        <item>58,VE</item>
        <item>84,VN</item>
        <item>681,WF</item>
        <item>967,YE</item>
        <item>260,ZM</item>
        <item>263,ZW</item>
    </string-array>
    <string name="title_activity_payment">Make Payment</string>
    <string name="finishordertext">Please make payment to finish order</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_walk_through">WalkThroughActivity</string>
    <string name="skip">Skip</string>
    <string name="plus91">+91</string>
    <string name="bysigining">By Signing in, I agree to SuperGenie app&#160;</string>
    <string name="termsandservices"><u>Terms and Conditions</u></string>
</resources>