<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/paylayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_10sdp"
    android:background="@color/e3f2fd"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_10sdp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/companyname"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textIsSelectable="false"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/rate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|right"
            android:singleLine="true"
            android:text="@string/price999"
            android:textIsSelectable="false"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_10sdp"
        android:layout_weight="3">

        <TextView
            android:id="@+id/orderdetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:maxLines="10"
            android:text="@string/paynowrandomtext"
            android:textIsSelectable="false"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_10sdp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/payascod"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="text"
            android:text="@string/paycod"
            android:textColor="@color/colorPrimary"
            android:textIsSelectable="false"
            android:textSize="@dimen/_12sdp"
            android:visibility="gone" />

        <Button
            android:id="@+id/paynow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="text"
            android:text="@string/paynow"
            android:textColor="@color/colorPrimary"
            android:textIsSelectable="false"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>
</LinearLayout>