<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:circleprogress="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.getgenieapp.android.CustomViews.TextView.AutoResizeTextView
            android:id="@+id/welcomemsg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/welcomeMessage"
            android:textColor="@color/generalTextColor" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:paddingBottom="100dp"
        android:paddingLeft="100dp"
        android:paddingRight="100dp"
        android:paddingTop="100dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/money_genie_ticket_main" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/companyname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/companyName"
            android:textColor="@color/generalTextColor"
            android:textSize="@dimen/little_big_text_size" />

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/version"
            android:textColor="@color/generalTextColor"
            android:textSize="@dimen/small_text_size" />

        <TextView
            android:id="@+id/copyrights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/copyrights"
            android:textColor="@color/generalTextColor"
            android:textSize="@dimen/small_text_size" />

    </LinearLayout>

</LinearLayout>