<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="horizontal"
    tools:context="com.supergenieapp.android.Fragments.RegisterFragment">

    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="13"
        android:orientation="vertical">

        <Space
            android:layout_width="@dimen/_1sdp"
            android:layout_height="@dimen/_20sdp" />

        <com.supergenieapp.android.CustomViews.ProgressBar.LoadingView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/parentLoadingView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/e3f2fd"
            app:lv_color="@android:color/holo_red_dark"
            app:lv_loading="false"
            app:lv_title="@string/loading">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_10sdp">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_marginLeft="@dimen/_minus5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:layout_marginStart="@dimen/_minus5sdp"
                        android:hint="@string/name"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:maxLength="50"
                        android:singleLine="true"
                        android:textColorHighlight="@color/colorPrimaryDark"
                        android:textSize="@dimen/_18sdp"
                        app:met_baseColor="@color/color444"
                        app:met_floatingLabel="highlight"
                        app:met_iconLeft="@drawable/ic_person_white_24dp"
                        app:met_iconPadding="0dp"
                        app:met_maxCharacters="50"
                        app:met_primaryColor="@color/color444"
                        app:met_textColorHint="@color/colorPrimaryDark" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/areacode"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="10dp"
                            android:background="@android:color/transparent"
                            android:editable="false"
                            android:gravity="center"
                            android:hint="@string/plus91"
                            android:textColorHighlight="@color/color999"
                            android:textSize="@dimen/_18sdp" />

                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/number"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_marginRight="@dimen/_5sdp"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:layout_weight="1"
                            android:hint="@string/number"
                            android:imeOptions="actionDone"
                            android:inputType="phone"
                            android:maxLength="10"
                            android:singleLine="true"
                            android:textColorHighlight="@color/colorPrimaryDark"
                            android:textSize="@dimen/_18sdp"
                            app:met_baseColor="@color/color444"
                            app:met_floatingLabel="highlight"
                            app:met_maxCharacters="10"
                            app:met_primaryColor="@color/color444"
                            app:met_textColorHint="@color/colorPrimaryDark" />
                    </LinearLayout>
                </LinearLayout>


                <com.supergenieapp.android.CustomViews.Button.ButtonRectangle
                    android:id="@+id/getStarted"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:inputType="text"
                    android:text="@string/getstarted"
                    android:textColor="@color/color999" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <com.supergenieapp.android.CustomViews.TextView.AutoResizeTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:singleLine="true"
                        android:text="@string/bysigining"
                        android:textSize="@dimen/_7sdp" />

                    <Button
                        android:id="@+id/terms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:inputType="text"
                        android:singleLine="true"
                        android:text="@string/termsandservices"
                        android:textSize="@dimen/_8sdp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

        </com.supergenieapp.android.CustomViews.ProgressBar.LoadingView>

    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />
</LinearLayout>
