<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="horizontal"
    tools:context="com.getgenieapp.android.Fragments.RegisterFragment">

    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.getgenieapp.android.CustomViews.ProgressBar.LoadingView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/parentLoadingView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:lv_color="@android:color/holo_red_dark"
                app:lv_loading="false"
                app:lv_title="@string/loading">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="@dimen/_1sdp"
                        android:layout_height="@dimen/_20sdp" />

                    <com.getgenieapp.android.CustomViews.TextView.AutoResizeTextView
                        android:id="@+id/subText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/verifycodetext"
                        android:textColor="@color/color444"
                        android:textIsSelectable="false"
                        android:textSize="@dimen/_15sdp" />

                    <Space
                        android:layout_width="@dimen/_1sdp"
                        android:layout_height="@dimen/_10sdp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <EditText
                            android:id="@+id/char1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLength="1" />

                        <EditText
                            android:id="@+id/char2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLength="1" />


                        <EditText
                            android:id="@+id/char3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLength="1" />

                        <EditText
                            android:id="@+id/char4"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:maxLength="1" />


                    </LinearLayout>

                    <Space
                        android:layout_width="@dimen/_1sdp"
                        android:layout_height="@dimen/_10sdp" />

                    <Button
                        android:id="@+id/tapToResend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:inputType="text"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/taptoresend"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_15sdp" />

                    <Space
                        android:layout_width="@dimen/_1sdp"
                        android:layout_height="@dimen/_10sdp" />

                    <Button
                        android:id="@+id/redoRegistration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:inputType="text"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/redoregistration"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_15sdp" />
                </LinearLayout>

            </com.getgenieapp.android.CustomViews.ProgressBar.LoadingView>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3" />
    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />
</LinearLayout>
